--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.main-bg {
+  height: 300px;
+  background-image: url(https://codingapple1.github.io/shop/shoes3.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
 .App {
   text-align: center;
 }
